doc/routing-to-sys-components/sys-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress
  namespace: cf-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.sys.eirini-dev-1.routing.lol'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*.sys.eirini-dev-1.routing.lol'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
